--- a/docker/todo-app/back-end/Dockerfile
+++ b/docker/todo-app/back-end/Dockerfile
@@ -1,1 +1,7 @@
-
+FROM node:14-alpine as builder
+WORKDIR /app
+ADD node_modules.tar.gz .
+COPY . .
+RUN npm install
+EXPOSE 3001
+ENTRYPOINT [ "npm", "start" ]
