feat: Adiciona o comando que gera uma build a partir do Dockfile da pasta tests, nomeando a imagem com o nome desejado

--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,7 @@
-
+FROM mjgargani/puppeteer:trybe1.0
+WORKDIR /app
+ENV FRONT_HOST="todofrontend"
+ENV FRONT_PORT="3000"
+ADD node_modules.tar.gz ./
+COPY . .
+ENTRYPOINT [ "npm", "test" ]
