--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:14-alpine as builder
 WORKDIR /app
-ENV API_HOST="todoback" \
-    REACT_APP_API_HOST=${API_HOST}
-ENV API_PORT="3001" \
-    REACT_APP_API_PORT=${API_PORT}
+ENV REACT_APP_API_HOST="todoback"
+ENV REACT_APP_API_PORT="3001"
 ADD node_modules.tar.gz .
 COPY . .
 RUN npm install && npm run build
